# qaiko

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/qaiko/: __init__.py  main.py
src/qaiko.egg-info/: PKG-INFO
tests/: test_main.py
